--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,9 @@ edition = "2021"
 
 [dependencies]
 axum = "0.7.4"
+cargo-manifest = "0.17.0"
 serde = { version = "1.0.215", features = ["derive"] }
 shuttle-axum = "0.49.0"
 shuttle-runtime = "0.49.0"
 tokio = "1.28.2"
+toml = "0.8.19"
