--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,10 @@ edition = "2021"
 [dependencies]
 axum = "0.7.4"
 cargo-manifest = "0.17.0"
+leaky-bucket = "1.1.2"
 serde = { version = "1.0.215", features = ["derive"] }
+serde_json = "1.0.133"
 shuttle-axum = "0.49.0"
 shuttle-runtime = "0.49.0"
-tokio = "1.28.2"
+tokio = { version = "1.28.2", features = ["time"] }
 toml = "0.8.19"
