--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 axum = "0.7.4"
 cargo-manifest = "0.17.0"
+jwt-simple = "0.12.11"
 leaky-bucket = "1.1.2"
 serde = { version = "1.0.215", features = ["derive"] }
 serde_json = "1.0.133"
