--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,7 @@ serde = { version = "1.0.215", features = ["derive"] }
 serde_json = "1.0.133"
 shuttle-axum = "0.49.0"
 shuttle-runtime = "0.49.0"
+shuttle-shared-db = { version = "0.49.0", features = ["postgres", "sqlx"] }
+sqlx = { version = "0.8.2", features = ["uuid", "chrono"] }
 tokio = { version = "1.28.2", features = ["time"] }
 toml = "0.8.19"
