--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+askama = "0.12.1"
 axum = "0.7.4"
 cargo-manifest = "0.17.0"
 jwt-simple = "0.12.11"
@@ -16,3 +17,4 @@ shuttle-shared-db = { version = "0.49.0", features = ["postgres", "sqlx"] }
 sqlx = { version = "0.8.2", features = ["uuid", "chrono"] }
 tokio = { version = "1.28.2", features = ["time"] }
 toml = "0.8.19"
+tower-http = { version = "0.6.2", features = ["fs"] }
