--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 askama = "0.12.1"
-axum = "0.7.4"
+axum = { version = "0.7.4", features = ["multipart"] }
 cargo-manifest = "0.17.0"
 jwt-simple = "0.12.11"
 leaky-bucket = "1.1.2"
