--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ axum = { version = "0.7.4", features = ["multipart"] }
 cargo-manifest = "0.17.0"
 jwt-simple = "0.12.11"
 leaky-bucket = "1.1.2"
+rand = "0.8.5"
 serde = { version = "1.0.215", features = ["derive"] }
 serde_json = "1.0.133"
 shuttle-axum = "0.49.0"
